--- a/kinius.html
+++ b/kinius.html
@@ -223,7 +223,7 @@
             frameborder="0" allow="autoplay; fullscreen"></iframe>
     </div>
     <div class="loader-container">
-        <img class="logo" src="pliki/logo.png" alt="Logo">
+        <img class="logo" src="https://devilhub.cf/logo.png" alt="Logo">
         <input class="volume-slider" type="range" min="0" max="100" value="50" step="1">
 
         <div class="loading-text">Ładowanie plików serwera...</div>
